--- a/templates/admin/a_layout.html
+++ b/templates/admin/a_layout.html
@@ -99,7 +99,7 @@
           <ul class="sidebar-menu" data-widget="tree">
             <li class="header">MAIN NAVIGATION</li>
             <li class="member_manage"><a href="/myadmin/member_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>用户管理</span></a></li>
-            <li class="items_manage"><a href="/items_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>商品管理</span></a></li>
+            <li class="items_manage"><a href="/myadmin/item_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>商品管理</span></a></li>
             <li class="brands_manage"><a href="/brands_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>品牌管理</span></a></li>
             <li class="categories_manage"><a href="/categories_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>分类管理</span></a></li>
             <li class="item_comments_manage"><a href="/item_comments_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>评论管理</span></a></li>
