--- a/templates/admin/a_items_manage.html
+++ b/templates/admin/a_items_manage.html
@@ -1,16 +1,17 @@
 {% extends '../admin/a_layout.html' %}
+{% load ui_method %}
 {% block css %}
     
-{% end %}
+{% endblock %}
 
 {% block title %}
 商品表            
-{% end %}
+{% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> 商品管理</a></li>
 </ol>
-{% end %}
+{% endblock %}
 
 {% block content_title %}
 
@@ -20,7 +21,7 @@
             <div class="col-md-8">
                 <form action="" method="GET" class="search_input">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="搜索商品名称" name="search_value" value="{{search_value if search_value else '' }}">
+                    <input type="text" class="form-control" placeholder="搜索商品名称" name="search_value" value="{{ search_value }}">
                     <span class="input-group-btn">
                         <button class="btn btn-default search_input_btn" type="submit">搜索</button>
                     </span>
@@ -38,7 +39,7 @@
         <button type="button" class="btn btn-danger delete_item" >删除<span class="glyphicon glyphicon-trash"></span></button>
     </div>
 </div>
-{% end %}
+{% endblock %}
 
 {% block content %}
 
@@ -49,7 +50,7 @@
         <div class="panel-body">
             <div class="media-left">
                 <a href="#">
-                    <img class="media-object" src="{% module GetThumbiconById(i.item_id) %}" style="width: 100px; height: 100px;">
+                    <img class="media-object" src="{% get_thumbicon_by_id i.item_id %}" style="width: 100px; height: 100px;">
                 </a>
             </div>
                 <div class="media-body">
@@ -68,7 +69,7 @@
                             国外价格：{{i.foreign_price}}
                         </div>
                         <div class="row">
-                            容量：/规格：{% if i.specifications_type_id %}{{specifications_type_dict[i.specifications_type_id]}}{% end %}
+                            容量：/规格：{% if i.specifications_type_id %}{% get_value_by_key specifications_type_dict i.specifications_type_id %}{% endif %}
                         </div>
                     </div>
                     <div class="col-md-2">
@@ -76,10 +77,10 @@
                             适用人群：{{i.for_people}}
                         </div>
                         <div class="row">
-                            所属品牌：{{ brand_dict.get(i.brand_id, '') }}
+                            所属品牌：{% if i.brand_id %}{% get_value_by_key brand_dict i.brand_id %}{% endif %}
                         </div>
                         <div class="row">
-                            所属分类：{{ categories_dict.get(i.categories_id, '') }}
+                            所属分类：{% if i.categories_id %}{% get_value_by_key categories_dict i.categories_id %}{% endif %}
                         </div>
                     </div>
                     <div class="col-md-2">
@@ -98,18 +99,19 @@
             </div>
         </div>
     </div>
-    {% end %}
+    {% endfor %}
 </div>
 
 <div>
     <nav aria-label="Page navigation">
         <ul class="pagination page_box">
-            {% module Pagingfunc(current_page, item_obj_count, filter_args, uri) %}
+            {% Pagingfunc current_page item_count filter_args uri as page %}
+            {{ page | safe }}
         </ul>
     </nav>
 </div>
 
-{% end %}
+{% endblock %}
 {% block js %}
     <script>
     $(function(){
@@ -253,4 +255,4 @@
 
     }
     </script>
-{% end %}
+{% endblock %}
