--- a/templates/admin/a_items_manage.html
+++ b/templates/admin/a_items_manage.html
@@ -147,51 +147,51 @@
     })
     
     
-    var item_id = null
-    function add_or_edit_item(is_edit){
-        var request_url = is_edit ? '/j/edit_item/?item_id=' + item_id : '/j/add_item/'
-        var $input_list = $('.item_form input')
-        var $select_list = $('.item_form select')
-        var data_dict = {}
-        $input_list.each(function(index,item){
-            var input_value = $(item).val().trim()
-            if(is_edit){
-                var input_old_value = $(item).attr('old_value')
-                if(input_value != input_old_value){
-                    data_dict[$(item).attr('name')]=input_value
-                }
-            }else{
-                data_dict[$(item).attr('name')]=input_value
-            }
+    // var item_id = null
+    // function add_or_edit_item(is_edit){
+    //     var request_url = is_edit ? '/j/edit_item/?item_id=' + item_id : '/j/add_item/'
+    //     var $input_list = $('.item_form input')
+    //     var $select_list = $('.item_form select')
+    //     var data_dict = {}
+    //     $input_list.each(function(index,item){
+    //         var input_value = $(item).val().trim()
+    //         if(is_edit){
+    //             var input_old_value = $(item).attr('old_value')
+    //             if(input_value != input_old_value){
+    //                 data_dict[$(item).attr('name')]=input_value
+    //             }
+    //         }else{
+    //             data_dict[$(item).attr('name')]=input_value
+    //         }
                 
-        })
-        $select_list.each(function(index, item){
-            var select_value = $(item).val()
-            if(is_edit){
-                var select_old_value = $(item).attr('old_value')
-                if(select_value != select_old_value){
-                    data_dict[$(item).attr('name')]=select_value
-                }
-            }else{
-                data_dict[$(item).attr('name')]=select_value
-            }
-        })
-        data_dict['_xsrf'] = getCookie("_xsrf")
-        $.post(
-            request_url,
-            data_dict,
-            function(value){
-                if(value.result == 'success'){
-                    $('#exampleModal').modal('hide')
-                    location.reload()
-                }else{
-                    var error_msg = value.message
-                    $('.return_msg_box').text(error_msg)
-                }
-            },
-            'json'
-        )
-    }
+    //     })
+    //     $select_list.each(function(index, item){
+    //         var select_value = $(item).val()
+    //         if(is_edit){
+    //             var select_old_value = $(item).attr('old_value')
+    //             if(select_value != select_old_value){
+    //                 data_dict[$(item).attr('name')]=select_value
+    //             }
+    //         }else{
+    //             data_dict[$(item).attr('name')]=select_value
+    //         }
+    //     })
+    //     data_dict['_xsrf'] = getCookie("_xsrf")
+    //     $.post(
+    //         request_url,
+    //         data_dict,
+    //         function(value){
+    //             if(value.result == 'success'){
+    //                 $('#exampleModal').modal('hide')
+    //                 location.reload()
+    //             }else{
+    //                 var error_msg = value.message
+    //                 $('.return_msg_box').text(error_msg)
+    //             }
+    //         },
+    //         'json'
+    //     )
+    // }
 
 
     function delete_item(){
@@ -206,10 +206,10 @@
         })
         if(item_id_list.length>0){
             $.post(
-                '/j/delete_item/',
-                {'item_id_list':item_id_list, '_xsrf':getCookie('_xsrf')},
+                '/myadmin/js/delete_items/',
+                {'item_id_list':item_id_list, 'csrfmiddlewaretoken':getCookie('csrftoken')},
                 function(value){
-                    if(value.result == 'success'){
+                    if(value.status == 'success'){
                         location.reload()
                     }else{
                         alert(value.message)
@@ -219,40 +219,37 @@
             )
         }
     }
-    function get_edit_item_info(){
-        $('.modal-title').text('编辑商品')
-        item_id = $(this).parent().parent().children().first().text()
-        var data_dict = null
-        $.get(
-            '/j/edit_item/?item_id='+item_id,
-            function(value){
-                if(value.result == 'success'){
-                    data_dict = value.data
-                    $('#exampleModal').modal('show')
-                    var $input_list = $('.item_form input')
-                    var $select_list = $('.item_form select')
-                    $input_list.each(function(index, item){
-                        $(item).attr('old_value', data_dict[$(item).attr('name')])
-                        $(item).val(data_dict[$(item).attr('name')])
-                    })
-                    $select_list.each(function(index, item){
-                        $(item).attr('old_value', data_dict[$(item).attr('name')])
-                        $(item).val(data_dict[$(item).attr('name')])
-                    })
-                    $('.submit_btn').unbind()
-                    $('.submit_btn').click(function(){
-                        add_or_edit_item(true)
-                    })
-                }else{
-                    alert(value.message)
-                }
-            },
-            'json'
-        )
-    }
+    // function get_edit_item_info(){
+    //     $('.modal-title').text('编辑商品')
+    //     item_id = $(this).parent().parent().children().first().text()
+    //     var data_dict = null
+    //     $.get(
+    //         '/j/edit_item/?item_id='+item_id,
+    //         function(value){
+    //             if(value.result == 'success'){
+    //                 data_dict = value.data
+    //                 $('#exampleModal').modal('show')
+    //                 var $input_list = $('.item_form input')
+    //                 var $select_list = $('.item_form select')
+    //                 $input_list.each(function(index, item){
+    //                     $(item).attr('old_value', data_dict[$(item).attr('name')])
+    //                     $(item).val(data_dict[$(item).attr('name')])
+    //                 })
+    //                 $select_list.each(function(index, item){
+    //                     $(item).attr('old_value', data_dict[$(item).attr('name')])
+    //                     $(item).val(data_dict[$(item).attr('name')])
+    //                 })
+    //                 $('.submit_btn').unbind()
+    //                 $('.submit_btn').click(function(){
+    //                     add_or_edit_item(true)
+    //                 })
+    //             }else{
+    //                 alert(value.message)
+    //             }
+    //         },
+    //         'json'
+    //     )
+    // }
 
-    function image_manage(){
-
-    }
     </script>
 {% endblock %}
