--- a/templates/admin/a_layout.html
+++ b/templates/admin/a_layout.html
@@ -100,7 +100,7 @@
             <li class="header">MAIN NAVIGATION</li>
             <li class="member_manage"><a href="/myadmin/member_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>用户管理</span></a></li>
             <li class="items_manage"><a href="/myadmin/item_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>商品管理</span></a></li>
-            <li class="brands_manage"><a href="/brands_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>品牌管理</span></a></li>
+            <li class="brands_manage"><a href="/myadmin/brand_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>品牌管理</span></a></li>
             <li class="categories_manage"><a href="/categories_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>分类管理</span></a></li>
             <li class="item_comments_manage"><a href="/item_comments_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>评论管理</span></a></li>
           </ul>
@@ -143,9 +143,9 @@
       </div><!-- /.content-wrapper -->
       <footer class="main-footer">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 2.0
+          <b>Version</b> 0.05
         </div>
-        <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+        <strong>UbsKinWeb &copy; 2018</strong>
       </footer>
       
       <!-- Control Sidebar -->      
