--- a/templates/admin/a_brand_manage.html
+++ b/templates/admin/a_brand_manage.html
@@ -1,16 +1,17 @@
 {% extends '../admin/a_layout.html' %}
+{% load ui_method %}
 {% block css %}
     
-{% end %}
+{% endblock %}
 
 {% block title %}
 品牌表
-{% end %}
+{% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> 品牌管理</a></li>
 </ol>
-{% end %}
+{% endblock %}
 
 {% block content_title %}
 
@@ -20,7 +21,7 @@
             <div class="col-md-8">
                 <form action="" method="GET" class="search_input">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="搜索品牌" name="search_value" value="{{search_value if search_value else '' }}">
+                    <input type="text" class="form-control" placeholder="搜索品牌" name="search_value" value="{{ search_value }}">
                     <span class="input-group-btn">
                         <button class="btn btn-default search_input_btn" type="submit">搜索</button>
                     </span>
@@ -33,12 +34,12 @@
         </div>
     </div>
     <div class="col-md-4">
-        <a href="/add_brand/" class="btn btn-info" >添加品牌 <span class="glyphicon glyphicon-plus"></span></a>
+        <a href="/myadmin/add_brand/" class="btn btn-info" >添加品牌 <span class="glyphicon glyphicon-plus"></span></a>
         <button type="button" class="btn btn-default choose_brands">选择全部<span class="glyphicon glyphicon-saved"></span></button>
         <button type="button" class="btn btn-danger delete_brands" >删除<span class="glyphicon glyphicon-trash"></span></button>
     </div>
 </div>
-{% end %}
+{% endblock %}
 
 {% block content %}
 <div style="padding: 15px;overflow: auto;">
@@ -49,7 +50,7 @@
             <div class="panel-body">
                 <div class="media-left">
                     <a href="#">
-                        <img class="media-object" src="{{i.brand_image if i.brand_image else '/images/user-default.jpg' }}" style="width: 100px; height: 100px;">
+                        <img class="media-object" src="{% if i.brand_image %} {{i.brand_image }} {% else %} /static/images/user-default.jpg {% endif %}" style="width: 100px; height: 100px;">
                     </a>
                 </div>
                     <div class="media-body">
@@ -70,7 +71,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="row">
-                                <a  href="/editor_brand/?brand_id={{i.brand_id}}&back_url={{request.uri}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 编辑</a>
+                                <a  href="/myadmin/editor_brand/?brand_id={{i.brand_id}}&back_url={{request.get_full_path}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 编辑</a>
                             </div>
                         </div>
                     </div>
@@ -80,17 +81,18 @@
         </div>
         
         
-    {% end %}
+    {% endfor %}
     <div>
         <nav aria-label="Page navigation">
             <ul class="pagination page_box">
-                {% module Pagingfunc(current_page, brands_count, filter_args, uri) %}
+                {% Pagingfunc current_page brands_count filter_args request.path as page %}
+                {{ page | safe }}
             </ul>
         </nav>
     </div>
 </div>
 
-{% end %}
+{% endblock %}
 {% block js %}
 <script>
     $(function(){
@@ -125,10 +127,10 @@
             })
             if(brand_ids_list.length>0){
                 $.post(
-                    '/j/delete_brands/',
-                    {'brand_ids_list':brand_ids_list, '_xsrf':getCookie('_xsrf')},
+                    '/myadmin/js/delete_brands/',
+                    {'brand_ids_list': brand_ids_list, 'csrfmiddlewaretoken': getCookie('csrftoken')},
                     function(value){
-                        if(value.result == 'success'){
+                        if(value.status == 'success'){
                             location.reload()
                         }else{
                             alert(value.message)
@@ -141,4 +143,4 @@
     })
 </script>
    
-{% end %}
+{% endblock %}
