--- a/templates/admin/a_item_comment_manage.html
+++ b/templates/admin/a_item_comment_manage.html
@@ -1,14 +1,15 @@
 {% extends '../admin/a_layout.html' %}
+{% load ui_method %}
 {% block css %}
-{% end %}
+{% endblock %}
 {% block title %}
 评论列表            
-{% end %}
+{% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> 评论管理</a></li>
 </ol>
-{% end %}
+{% endblock %}
 
 {% block content_title %}
 
@@ -19,7 +20,7 @@
             <div class="col-md-8">
                 <form action="" method="GET" class="search_input">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="按商品搜索" name="search_value" value="{{ search_value if search_value else '' }}">
+                    <input type="text" class="form-control" placeholder="按商品搜索" name="search_value" value="{{ search_value }}">
                     <span class="input-group-btn">
                         <button class="btn btn-default search_input_btn" type="submit">搜索</button>
                     </span>
@@ -37,14 +38,14 @@
         <button type="button" class="btn btn-danger delete_comment" type="button">删除<span class="glyphicon glyphicon-trash"></span></button>
     </div>
 </div>
-{% end %}
+{% endblock %}
 
 {% block content %}
 
 <div style="padding: 15px;overflow: auto;">
     {% for i in item_comments_list %}
         <div class="panel panel-success comment_list">
-            <div class="panel-heading"><input type="checkbox" class="item_checkbox" item-id={{i.comment_id}}>分类名：{{i.items.item_name}}</div>
+            <div class="panel-heading"><input type="checkbox" class="item_checkbox" item-id={{i.comment_id}}>商品名：{{i.item_name}}</div>
             <div class="panel-body">
                 <!-- <div class="media-left">
                     <a href="#">
@@ -57,34 +58,35 @@
                             评论内容：{{ i.comment_content }}
                         </div>
                         <div class="col-md-2">
-                            用户名：{{ i.members.member_name }}
+                            用户名：{{ i.member_name }}
                         </div>
                         <div class="col-md-2">
                             <div class="row">
                                 <a  href="/comment_image_manage/?comment_id={{i.comment_id}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 图片管理</a>                               
                             </div>
                             <div class="row">
-                                    <a  href="/editor_comment/?comment_id={{i.comment_id}}&back_url={{request.uri}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 编辑</a>
+                                    <a  href="/editor_comment/?comment_id={{i.comment_id}}&back_url={{request.get_full_path}}" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 编辑</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    {% end %}
+    {% endfor %}
 </div>
 
 
 <div>
     <nav aria-label="Page navigation">
         <ul class="pagination page_box">
-            {% module Pagingfunc(current_page, count, filter_args, uri) %}
+            {% Pagingfunc current_page count filter_args request.path as page %}
+            {{ page | safe }}
         </ul>
     </nav>
 </div>
 
 
-{% end %}
+{% endblock %}
 
 {% block js %}
     <script>
@@ -121,7 +123,7 @@
         
  
 
-        // 删除用户按钮
+        // 删除评论按钮
         function delete_comment(){
             var $item_list = $('.comment_list')
             var comment_ids_list = []
@@ -135,10 +137,10 @@
         
             if(comment_ids_list.length>0){
                 $.post(
-                    '/j/delete_comments/',
-                    {'comment_ids_list': comment_ids_list, '_xsrf': getCookie('_xsrf')},
+                    '/myadmin/js/delete_item_comments/',
+                    {'comment_ids_list': comment_ids_list, 'csrfmiddlewaretoken': getCookie('csrftoken')},
                     function(value){
-                        if(value.result == 'success'){
+                        if(value.status == 'success'){
                             location.reload()
                         }else{
                             alert(value.message)
@@ -149,87 +151,6 @@
             }
         }
 
-        // 获取待编辑用户信息
-        var categorie_id = null
-        function get_edit_category_info(){
-            $('.modal-title').text('编辑分类')
-            categorie_id = $(this).parent().parent().children().first().text()
-            var data_dict = null
-            $.get(
-                '/j/edit_categorie/?categorie_id=' + categorie_id,
-                function(value){
-                    if(value.result == 'success'){
-                        data_dict = value.data
-                        $('#exampleModal').modal('show')
-                        var $input_list = $('.categorie_form input')
-                        var $select_list = $('.categorie_form select')
-                        $input_list.each(function(index, item){
-                            $(item).attr('old_value', data_dict[$(item).attr('name')])
-                            $(item).val(data_dict[$(item).attr('name')])
-                        })
-                        $select_list.each(function(index, item){
-                            $(item).attr('old_value', data_dict[$(item).attr('name')])
-                            $(item).val(data_dict[$(item).attr('name')])
-                        })
-                        $('.submit_btn').unbind()
-                        $('.submit_btn').click(function(){
-                            add_or_edit_categorie(true)
-                        })
-                    }else{
-                        alert(value.message)
-                    }
-                },
-                'json'
-            )
-            
-        }
-
-        //添加用户或着编辑用户
-        function add_or_edit_categorie(is_edit){
-            var post_url = is_edit ? '/j/edit_categorie/?categorie_id=' + categorie_id : '/j/add_categorie/'
-            var $input_list = $('.categorie_form input')
-            var $select_list = $('.categorie_form select')
-            var data_dict = {}
-            $input_list.each(function(index,item){
-                var input_value = $(item).val().trim()
-                if(is_edit){
-                    var input_old_value = $(item).attr('old_value')
-                    if(input_value != input_old_value){
-                        data_dict[$(item).attr('name')]=input_value
-                    }
-                }else{
-                    data_dict[$(item).attr('name')]=input_value
-                }  
-            })
-            $select_list.each(function(index, item){
-                var select_value = $(item).val()
-                if(is_edit){
-                    var select_old_value = $(item).attr('old_value')
-                    if(select_value != select_old_value){
-                        data_dict[$(item).attr('name')]=select_value
-                    }
-                }else{
-                    data_dict[$(item).attr('name')]=select_value
-                }
-            })
-            if(is_edit){
-                data_dict['categorie_id'] = categorie_id
-            }
-            data_dict['_xsrf'] = getCookie("_xsrf")
-            $.post(
-                post_url,
-                data_dict,
-                function(value){
-                    if(value.result == 'success'){
-                        $('#exampleModal').modal('hide')
-                        location.reload()
-                    }else{
-                        $('.return_msg_box').text(value.message)
-                    }
-                },
-                'json'
-            )
-        }
 
     </script>
-{% end %}
+{% endblock %}
