--- a/templates/admin/a_layout.html
+++ b/templates/admin/a_layout.html
@@ -102,7 +102,7 @@
             <li class="items_manage"><a href="/myadmin/item_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>商品管理</span></a></li>
             <li class="brands_manage"><a href="/myadmin/brand_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>品牌管理</span></a></li>
             <li class="categories_manage"><a href="/myadmin/categorie_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>分类管理</span></a></li>
-            <li class="item_comments_manage"><a href="/item_comments_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>评论管理</span></a></li>
+            <li class="item_comments_manage"><a href="/myadmin/item_comment_manage/"><i class="fa fa-circle-o text-aqua"></i> <span>评论管理</span></a></li>
           </ul>
         </section>
         <!-- /.sidebar -->
